--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,10 +2,50 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta name="theme-color" content="#2563eb" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="HerePark" />
+
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <link rel="apple-touch-icon" href="/icons/apple-touch-icon.png" />
+    <link rel="manifest" href="/manifest.json" />
+
+    <title>HerePark</title>
+    <meta
+      name="description"
+      content="HerePark provides real-time parking availability, occupancy analytics, and predictive parking forecasts with camera-based detection."
+    />
+    <meta
+      name="keywords"
+      content="parking, smart parking, real-time parking, parking AI, occupancy detection"
+    />
+    <meta name="author" content="HerePark" />
+
+    <!-- Open Graph (Facebook, LinkedIn, Discord) -->
+    <meta property="og:title" content="HerePark – Smart Parking Availability" />
+    <meta
+      property="og:description"
+      content="Real-time parking availability and occupancy analytics powered by AI."
+    />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter / X Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="HerePark – Smart Parking System" />
+    <meta
+      name="twitter:description"
+      content="Live parking slot predictions and occupancy tracking."
+    />
+
+    <meta name="robots" content="index, follow" />
+
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
